@startuml

hide empty members

package structure {
    class Structure2D {
        - vector<shared_ptr<Node>> nodes
        - shared_ptr<Mesh> mesh
        - LoadCollection2D loads 
        - ConstraintCollection2D constraints
        - ElementData stresses
        - NodeData displacements
        + void Analyze()
        + ElementData GetStresses()
        + NodeData GetDisplacements()
    }
}

package axis {
    class Axis2D
}

package load {
    abstract class NodeForce2D {
        + {abstract} shared_ptr<Node> Node()
        + {abstract} Axis2D Axis()
        + {abstract} double Value()
    }
    class LoadCollection2D {
        + ForceVector2D ForceVector(vector<shared_ptr<Node>> nodes)
        - vector<shared_ptr<NodeForce2D>> loads
    }
    class ConcentratedLoad2D extends NodeForce2D {
        + shared_ptr<Node> Node()
        + Axis2D Axis()
        + double Value()
        - shared_ptr<Node> node 
        - Axis2D axis
        - double value
    }
}

package constraint {
    class ConstraintCollection2D {
        - vector<Constraint2D> constraint_list
        + vector<int> ConstraintIndexes(IndexHolder index_holder);
    }
    class Constraint2D {
        - shared_ptr<Node> node
        - Axis2D axis
        + shared_ptr<Node> GetNode()
        + Axis2D GetAxis()
    }
}

package solver {
    class GlobalStiffnessMatrix2D {
        + SparseMatrix getEigen()
        + void makeMatrix()
        + SparseMatrix Contract(vector<int> constraint_indexes);
        + int index(shared_ptr<Node> node, Axis2D axis)
        - SparseMatrix matrix
        - IndexHolder index_holder
    }
    class ForceVector2D {
        + add(shared_ptr<Node> node, Axis2D axis, double value)
        + int index(shared_ptr<Node> node, Axis2D axis);
        + VectorXd Contract(vector<int> constraint_indexes);
        + VectorXd getEigen()
        - VectorXd vector
        - IndexHolder index_holder
    }
    class IndexHolder {
        + IndexOf(shared_ptr<Node> node, Axis2D axis)
        - map<shared_ptr<Node>, map<Axis2D, unsigned_int> index_map
    }
}

package geometry {
    abstract class Point {
        + {abstract} double X()
        + {abstract} double Y()
        + {abstract} double Z()
    }
    class Point2D extends Point {
        + double X()
        + double Y()
        + double Z()
    }
    class Rectangle {
        + double MinX()
        + double MinY()
        + double MaxX()
        + double MaxY()
        + double Width()
        + double Height()
    }
}

package mesh {
    abstract class Mesh {
        + {abstract} GlobakKMatrix(unsinged int node_size, IndexHolder index_holder)
    }
    class Mesh2D extends Mesh {
        - vector<shared_ptr<FiniteElement2D>> elements
        + GlobakKMatrix(unsinged int node_size, IndexHolder index_holder)
    }
}

package mesh_algorithm {
    class RectangleTriangulation {
        + Structure2D CreateMesh()
        - Rectangle rectangle
        - Material material
    }
}

package element {
    abstract class FiniteElement2D {
        + {abstract} MatrixXd BMatrix()
        + {abstract} MatrixXd KMatrix()
        + {abstract} MatrixXd DMatrix()
        + {abstract} double Area()
    }
    class TriangleElement2D extends FiniteElement2D {
        + MatrixXd BMatrix()
        + MatrixXd KMatrix()
        + MatrixXd DMatrix()
        + double Area()
        - Material material
        - Node n1
        - Node n2
        - Node n3
    }
}

package material {
    abstract class Material {
        + {abstract} MatrixXd DMatrix()
    }
    class PlainStressMaterial extends Material {
        - MaterialConstant youngs_modulus
        - MaterialConstant poissons_ratio
        + MatrixXd DMatrix()
    }
    class PlainStrainMaterial extends Material {
        - MaterialConstant youngs_modulus
        - MaterialConstant poissons_ratio
        + MatrixXd DMatrix()
    }
    abstract class MaterialConstant
    class PoissonsRatio extends MaterialConstant
    class YoungsModulus extends MaterialConstant
}

package node {
    abstract class Node {
        + {abstract} double X()
        + {abstract} double Y()
        + {abstract} double Z()
        + {abstract} int Index(int i)
    }
    class Node2D extends Node {
        - Point point 
        + double X()
        + double Y()
        + double Z()
        + int Index(int i)
    }
}

package output {
    class ElementData {
        + void SetValue(shared_ptr<FiniteElement2D> element, double value)
        + double ValueOf(shared_ptr<FiniteElement2D> element)
        - map<shared_ptr<FiniteElement2D>, double> map
    }
    class NodeData {
        + void SetValue(shared_ptr<Node> node, Axis2D axis, double value)
        + double ValueOf(shared_ptr<Node> node, Axis2D axis)
        - map<shared_ptr<Node>, map<Axis2D, double>> map
    }
}

Constraint2D <-- Axis2D
Constraint2D <-- Node
ConstraintCollection2D o-- Constraint2D : aggregation
ConstraintCollection2D <-- IndexHolder : use >
ConcentratedLoad2D <-- Axis2D 
ConcentratedLoad2D <-- Node
Structure2D <-- ForceVector2D : use >
Structure2D <-- GlobalStiffnessMatrix2D : use >
ForceVector2D <-- IndexHolder : use >
FiniteElement2D <-- Node : contains >
GlobalStiffnessMatrix2D <-- IndexHolder : use >
IndexHolder <-- Axis2D : use >
IndexHolder <-- Node : use >
LoadCollection2D o-- NodeForce2D : aggregation
LoadCollection2D <-- ForceVector2D : create >
LoadCollection2D <-- IndexHolder : use >
LoadCollection2D <-- Node
Mesh2D <-- GlobalStiffnessMatrix2D : create >
Mesh2D <-- IndexHolder : use >
Mesh2D <-- FiniteElement2D : contains >
Node2D <-- Point2D : contains >
PlainStrainMaterial <-- MaterialConstant : contains >
PlainStressMaterial <-- MaterialConstant : contains >
Rectangle <-- Point : constructed by >
RectangleTriangulation <-- Material : create >
RectangleTriangulation <-- Structure2D : create >
RectangleTriangulation <-- Rectangle : use >
Structure2D <-- Mesh : contains >
Structure2D <-- ConstraintCollection2D : contains >
Structure2D <-- LoadCollection2D : contains >
TriangleElement2D <-- Node : contains >
TriangleElement2D <-- Material : contains >
ElementData <-- FiniteElement2D
NodeData <-- Node
Structure2D <-- ElementData : output >
Structure2D <-- NodeData : output >

@enduml
